# secret-santa-service

./: Cargo.toml  README.md
client/: .env  .gitignore  Cargo.toml
client/src/: args.rs  main.rs
server/: .env  Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs  santas.rs
server/src/db/: mongodb_repo.rs
server/src/models/: mod.rs  santa_model.rs
src/: auth.rs  db.rs  defs.rs  group.rs  ip.rs  main.rs  proc_for_admin.rs  proc_for_users.rs  query_proc.rs  state.rs  user.rs
